--- a/day01 expanding cards/style.css
+++ b/day01 expanding cards/style.css
@@ -1,25 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yomogi&display=swap');
 
 *{
     box-sizing: border-box;
 }
 
 body{
-    font-family: 'Muli', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: #FF4F00;
+    font-family: 'Yomogi', sans-serif;
     height: 100vh;
     overflow: hidden;
     margin: 0;
 }
 
+.title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    font-size: 3.5em;
+    color: #fff;
+}
 .container{
     display: flex;
     width: 90vw;
 }
 
 .panel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
