--- a/day02 progress steps/style.css
+++ b/day02 progress steps/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
 :root{
-    --line-border-fill: #3498db;
-    --line-border-empty: #e0e0e0;
+    --line-border-fill: #9B72AA;
+    --line-border-empty: #FFF5DE;
 }
 
 *{
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-color: #f6f7fb;
+    background-color: #C6B4CE;
     font-family: 'Muli', sans-serif;
     display: flex;
     align-items: center;
@@ -84,6 +84,7 @@ body{
     padding: 8px 30px;
     margin: 5px;
     font-size: 14px;
+    transition: .7s ease-out;
 }
 
 .btn:active{
@@ -97,6 +98,9 @@ body{
 .btn:disabled{
     background-color: var(--line-border-empty);
     cursor: not-allowed;
+    color: var(--line-border-fill);
+    transform: scale(0.7);
+    transition: .7s ease-out;
 }
 
 
