--- a/day10-dad-jokes/style.css
+++ b/day10-dad-jokes/style.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 :root {
-  --color-lime: #b6eb7a;
-  --color-cream: #f7f7ee;
-  --color-orange: #fb7813;
-  --color-green-acqua: #17706e;
+  --color-orange: #3c5186;
+  --color-purple: #9b72aa;
+  --color-light-purple: #c6b4ce;
+  --color-cream: #fff5de;
 }
 
 * {
@@ -12,8 +12,8 @@
 }
 
 body {
-  background-color: var(--color-lime);
-  font-family: "Muli", sans-serif;
+  background-color: var(--color-purple);
+  font-family: "Ubuntu", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,23 +25,26 @@ body {
 }
 
 .container {
-  color: var(--color-green-acqua);
-  background-color: var(--color-cream);
+  color: var(--color-cream);
+  background-color: var(--color-light-purple);
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
   padding: 50px 20px;
   text-align: center;
   max-width: 100%;
   width: 800px;
+  
 }
 
 h3 {
+  color: var(--color-orange);
   margin: 0;
   opacity: 0.8;
   letter-spacing: 2px;
 }
 
 .joke {
+  color: var(--color-orange);
   font-size: 30px;
   letter-spacing: 1px;
   line-height: 40px;
